--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,11 @@
 			<artifactId>log4j-api</artifactId>
 			<version>2.20.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>4.20.0</version>
+		</dependency>
 	</dependencies>
 
 </project>
