Решение задач уровня Middle. Категория : 3.5. Spring boot Тема : 3.5.7. Deploy 1. Spring Liquibase [#302330] (spring.profiles.active)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 server.error.include-message=always
 spring.liquibase.change-log=classpath:db/liquibase-changeLog.xml
 spring.liquibase.enabled=true
+spring.profiles.active=@spring.profiles.active@
